# apertium-hin

./: .gitattributes  .gitignore  AUTHORS  Makefile.am  README  apertium-hin.hin.acx  apertium-hin.hin.dix  apertium-hin.hin.rlx  apertium-hin.hin.tagged  apertium-hin.pc.in  configure.ac  configure~  count.sh  hin.prob  hindiCG.txt  modes.xml
dev/: codes.txt  hin.freq.categorised.txt  hin.freq.lemmatised.txt
dev/GCI-Tasks-Data/: hin-freq1.txt  hin-freq10.txt  hin-freq11.txt  hin-freq12.txt  hin-freq13.txt  hin-freq14.txt  hin-freq15.txt  hin-freq16.txt  hin-freq17.txt  hin-freq2.txt  hin-freq3.txt  hin-freq4.txt  hin-freq5.txt  hin-freq6.txt  hin-freq7.txt  hin-freq8.txt  hin-freq9.txt
speller/: editdist.default.txt  index.xml  strings.default.txt
test/: analysis-input.txt  analysis-morph-expected.txt  tests.json
texts/: Bade Bhaisaab (disambiguated) .txt  Bade Bhaisaab.txt  India Wiki.txt  MANIFEST  formatted India Wiki.txt  maharastra1.raw.txt  maharastra2.raw.txt  maharastra3.raw.txt  maharastra4.raw.txt  maharastra5.raw.txt
texts/tagger_training/: 001.raw.txt  001.vislcg.txt  Makefile  README.md
